# mimi

client/: bundle.js  bundle.js.map  index.html  index.js  package-lock.json  package.json  rollup.config.js
server/: Cargo.toml
server/src/: connection.rs  lib.rs  main.rs
